cambio en las tildes del código

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Agendamiento de citas</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <! -- DESDE ACA INICIA EL CODIGO DE CSS -->
